--- a/Data Science/Analyze International Debt Statistics/README
+++ b/Data Science/Analyze International Debt Statistics/README
@@ -1,4 +1,4 @@
-In this project, you are going to analyze international debt data collected by The World Bank. The dataset contains information about the amount of debt (in USD) owed by developing countries across several categories. You are going to find the answers to questions like:
+In this project, we are going to analyze international debt data collected by The World Bank. The dataset contains information about the amount of debt (in USD) owed by developing countries across several categories. You are going to find the answers to questions like:
 
 What is the total amount of debt that is owed by the countries listed in the dataset?
 Which country owns the maximum amount of debt and what does that amount look like?
